tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_break_and_continue_outside_loop/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: continue is only allowed within loops
  ┌─ src/main.nr:3:13
  │
3 │             continue;
  │             ---------
  │

error: break is only allowed within loops
  ┌─ src/main.nr:6:13
  │
6 │             break;
  │             ------
  │

Aborting due to 2 previous errors
